--- a/app/src/main/res/layout/dialog_sure.xml
+++ b/app/src/main/res/layout/dialog_sure.xml
@@ -55,9 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="13dp"
-            android:paddingTop="13dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/cancel_tv"
@@ -65,6 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingBottom="13dp"
+                android:paddingTop="13dp"
                 android:text="否"
                 android:textColor="@color/black_color"
                 android:textSize="15sp" />
@@ -72,6 +72,8 @@
             <View
                 style="@style/LineStyle"
                 android:layout_width="0.5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="match_parent" />
 
             <TextView
@@ -80,6 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingBottom="13dp"
+                android:paddingTop="13dp"
                 android:text="是"
                 android:textColor="@color/theme_color"
                 android:textSize="15sp" />
