--- a/app/src/main/res/layout/item_lv_recruit.xml
+++ b/app/src/main/res/layout/item_lv_recruit.xml
@@ -21,9 +21,29 @@
                 android:id="@+id/tv_job_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="挖掘机老司机"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="6dp"
+                android:maxWidth="180dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="挖掘机老司机挖掘机老司机挖掘机老司机挖掘机老司机挖掘机老司机"
                 android:textColor="@color/theme_color"
                 android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/txtMark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_mark_person_bg"
+                android:layout_toRightOf="@id/tv_job_position"
+                android:layout_centerVertical="true"
+                android:paddingTop="1dp"
+                android:paddingBottom="1dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="11sp"
+                android:text="个人"
+                android:textColor="@color/text_black_color"/>
 
             <TextView
                 android:id="@+id/tv_salary"
@@ -33,7 +53,10 @@
                 android:text="￥5000-6000"
                 android:textColor="@color/orange_color"
                 android:textSize="14sp" />
+
         </RelativeLayout>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
