--- a/app/src/main/res/layout/item_lv_workshop.xml
+++ b/app/src/main/res/layout/item_lv_workshop.xml
@@ -24,32 +24,90 @@
             android:layout_marginLeft="12dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_company_name"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="安平县冠航丝网机械有限公司"
-                android:textColor="@color/black_color"
-                android:textSize="14sp" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_company_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="140dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="安平县冠航丝网机械有限公司"
+                    android:textColor="@color/black_color"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/imgViCertiGreen"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:visibility="visible"
+                    android:src="@mipmap/icon_certification_green"
+                    android:layout_marginLeft="3dp"/>
+
+                <ImageView
+                    android:id="@+id/imgViCertiBlue"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@mipmap/icon_certification"
+                    android:layout_marginLeft="3dp"/>
+
+                <ImageView
+                    android:id="@+id/imgViCertiYellow"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@mipmap/icon_certification_yellow"
+                    android:layout_marginLeft="3dp"/>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
+                android:maxWidth="200dp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:text="热门一手房源/安平县商业圈"
                 android:textColor="@color/theme_color"
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_date"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="11.01 19:02"
-            android:textColor="@color/light_gray_color"
-            android:textSize="13sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="11.01 19:02"
+                android:textColor="@color/light_gray_color"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/txtMark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/shape_mark_person_bg"
+                android:paddingTop="1dp"
+                android:paddingBottom="1dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="11sp"
+                android:text="个人"
+                android:textColor="@color/text_black_color"/>
+        </LinearLayout>
     </LinearLayout>
 
     <com.appjumper.silkscreen.view.MyRecyclerView
