--- a/app/src/main/res/layout/item_recycler_dynamic_workshop.xml
+++ b/app/src/main/res/layout/item_recycler_dynamic_workshop.xml
@@ -35,18 +35,32 @@
 
     <TextView
         android:id="@+id/txtTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/imgViHead"
-        android:layout_toLeftOf="@id/txtPrice"
-        android:maxLines="2"
+        android:maxWidth="130dp"
+        android:maxLines="1"
         android:ellipsize="end"
         android:lineSpacingExtra="2dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="6dp"
         android:text="铁丝拔丝现货"
         android:textSize="15sp"
         android:textColor="@color/theme_color"/>
+
+    <TextView
+        android:id="@+id/txtMark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_mark_person_bg"
+        android:layout_toRightOf="@id/txtTitle"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:textSize="11sp"
+        android:text="个人"
+        android:textColor="@color/text_black_color"/>
 
     <TextView
         android:id="@+id/txtSubTitle"
