--- a/app/src/main/res/layout/item_recycler_line_stock_shop.xml
+++ b/app/src/main/res/layout/item_recycler_line_stock_shop.xml
@@ -10,10 +10,10 @@
 
     <com.appjumper.silkscreen.view.BorderRectImageView
         android:id="@+id/imageView"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/silkscreen"/>
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/txtTitle"
@@ -27,16 +27,6 @@
         android:textSize="14sp"
         android:textColor="@color/text_black_color"/>
 
-    <TextView
-        android:id="@+id/txtCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtTitle"
-        android:layout_alignLeft="@id/txtTitle"
-        android:layout_marginTop="5dp"
-        android:text="20咨询"
-        android:textSize="12sp"
-        android:textColor="@color/light_gray_color"/>
 
     <TextView
         android:id="@+id/txtPrice"
@@ -44,19 +34,50 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/txtTitle"
         android:layout_alignBottom="@id/imageView"
-        android:text="¥195元/套"
+        android:text="195元/套"
         android:textSize="14sp"
         android:textColor="@color/orange_color"/>
 
-    <TextView
-        android:id="@+id/txtSurplus"
+
+
+    <LinearLayout
+        android:id="@+id/llNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@id/imageView"
-        android:text="剩余300套"
-        android:textSize="13sp"
-        android:textColor="@color/text_black_color"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtSales"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="销售：200套"
+            android:textSize="13sp"
+            android:textColor="@color/text_black_color"/>
+
+        <TextView
+            android:id="@+id/txtSurplus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="剩余：30套"
+            android:textSize="13sp"
+            android:textColor="@color/text_black_color"/>
+
+    </LinearLayout>
+
+
+
+    <TextView
+        android:id="@+id/txtCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/llNumber"
+        android:layout_alignLeft="@id/txtTitle"
+        android:text="20人咨询"
+        android:textSize="12sp"
+        android:textColor="@color/light_gray_color"/>
 
     <View
         style="@style/LineStyle"
