--- a/app/src/main/res/layout/activity_recruit_release2.xml
+++ b/app/src/main/res/layout/activity_recruit_release2.xml
@@ -23,8 +23,8 @@
                 android:orientation="horizontal"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp">
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -34,6 +34,7 @@
                     android:text="标题"/>
 
                 <EditText
+                    android:id="@+id/edtTxtTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -101,14 +102,14 @@
                         android:layout_height="22dp"
                         android:background="#DEDFE0"/>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/tv_job_position"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3.5"
                         android:paddingLeft="10dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
                         android:drawableRight="@mipmap/icon_home_arrows_right04"
                         android:background="@null"
                         android:editable="false"
@@ -153,8 +154,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="3.5"
                             android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:background="@null"
                             android:hint="请输入薪资范围"
                             android:textColor="@color/black_color"
@@ -192,14 +193,14 @@
                         android:layout_height="22dp"
                         android:background="#DEDFE0"/>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/tv_experience"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3.5"
                         android:paddingLeft="10dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
                         android:drawableRight="@mipmap/icon_home_arrows_right04"
                         android:background="@null"
                         android:editable="false"
@@ -241,23 +242,26 @@
                         android:orientation="horizontal">
 
                         <RadioButton
+                            android:id="@+id/rdoBtnfulltime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:paddingLeft="10dp"
+                            android:checked="true"
                             android:text="全职"
                             android:button="@null"
                             android:drawableLeft="@drawable/selector_checkbox_blue_round"
                             android:drawablePadding="5dp"/>
 
                         <RadioButton
+                            android:id="@+id/rdoBtnParttime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:layout_marginLeft="20dp"
                             android:text="兼职"
                             android:button="@null"
@@ -297,23 +301,26 @@
                         android:orientation="horizontal">
 
                         <RadioButton
+                            android:id="@+id/rdoBtnAll"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:paddingLeft="10dp"
+                            android:checked="true"
                             android:text="不限"
                             android:button="@null"
                             android:drawableLeft="@drawable/selector_checkbox_blue_round"
                             android:drawablePadding="5dp"/>
 
                         <RadioButton
+                            android:id="@+id/rdoBtnMan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:layout_marginLeft="20dp"
                             android:text="仅男士"
                             android:button="@null"
@@ -321,11 +328,12 @@
                             android:drawablePadding="5dp"/>
 
                         <RadioButton
+                            android:id="@+id/rdoBtnWoman"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:layout_marginLeft="20dp"
                             android:text="仅女士"
                             android:button="@null"
@@ -371,9 +379,10 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="3.5"
                             android:paddingLeft="10dp"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
                             android:background="@null"
+                            android:inputType="phone"
                             android:hint="输入工作年限要求"
                             android:textColor="@color/black_color"
                             android:textColorHint="@color/light_gray_color"
@@ -411,14 +420,14 @@
                         android:layout_height="22dp"
                         android:background="#DEDFE0"/>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/tv_work_address"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3.5"
                         android:paddingLeft="10dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
                         android:drawableRight="@mipmap/icon_home_arrows_right04"
                         android:background="@null"
                         android:editable="false"
@@ -459,9 +468,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="3.5"
                         android:paddingLeft="10dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:drawableRight="@mipmap/icon_home_arrows_right04"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="12dp"
                         android:background="@null"
                         android:maxLength="15"
                         android:text=""
@@ -487,128 +495,6 @@
 
 
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="12dp"
-                android:background="@color/view_background_gray_color" />
-
-            <View style="@style/LineStyle" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="12dp"
-                    android:text="职位信息"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
-
-                <View
-                    style="@style/LineStyle"
-                    android:layout_marginLeft="12dp" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="18dp"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="12dp"
-                            android:text="性别"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="15dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/tv_gender"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@null"
-                                android:hint="请选择性别"
-                                android:paddingBottom="12dp"
-                                android:paddingTop="12dp"
-                                android:singleLine="true"
-                                android:textColor="@color/black_color"
-                                android:textColorHint="@color/light_gray_color"
-                                android:textSize="14sp" />
-
-                            <View style="@style/LineStyle" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="12dp"
-                            android:text="类型"
-                            android:textColor="@color/black_color"
-                            android:textSize="14sp" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="15dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/tv_job_form"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@null"
-                                android:hint="请选择职位类型"
-                                android:paddingBottom="12dp"
-                                android:paddingTop="12dp"
-                                android:singleLine="true"
-                                android:textColor="@color/black_color"
-                                android:textColorHint="@color/light_gray_color"
-                                android:textSize="14sp" />
-
-                            <View style="@style/LineStyle" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-            <View style="@style/LineStyle" />
 
             <View
                 android:layout_width="match_parent"
@@ -724,7 +610,7 @@
                 android:layout_marginRight="15dp"
                 android:text="注：在【我的】页面【我的发布】中刷新让信息更靠前"
                 android:textColor="@color/red_color"
-                android:textSize="13sp"/>
+                android:textSize="12sp"/>
 
 
             <TextView
@@ -733,10 +619,10 @@
                 android:layout_height="45dp"
                 android:background="@drawable/selector_btn_blue"
                 android:gravity="center"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="12dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="6dp"
                 android:text="发布信息"
                 android:textColor="@color/while_color"
                 android:textSize="16sp" />
