--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:background="@color/view_background_gray_color"
     android:layout_height="match_parent">
+
     <!-- title -->
     <LinearLayout
         android:id="@+id/title_layout"
@@ -39,10 +40,9 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <View
-        android:layout_marginTop="12dp"
-        style="@style/LineStyle"
-        />
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -213,6 +213,53 @@
 
     </LinearLayout>
     <View
-        style="@style/LineStyle"
-        />
+        style="@style/LineStyle" android:layout_marginLeft="12dp"/>
+
+
+
+
+    <RelativeLayout
+        android:id="@+id/rlCompany"
+        android:layout_width="match_parent"
+        android:background="@drawable/select_white_background"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/black_color"
+            android:text="所属企业"
+            android:layout_centerVertical="true"
+            android:layout_margin="12dp"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            >
+            <TextView
+                android:id="@+id/txtCompanyName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="12dp"
+                android:text=""
+                android:textColor="@color/text_gray_color"
+                android:textSize="14sp"
+                android:src="@mipmap/ic_launcher"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/icon_my_arrows_right"/>
+        </LinearLayout>
+    </RelativeLayout>
+
+
+    <View
+        style="@style/LineStyle"/>
+
 </LinearLayout>
