--- a/app/src/main/res/layout/activity_company_details.xml
+++ b/app/src/main/res/layout/activity_company_details.xml
@@ -323,18 +323,42 @@
                 android:id="@+id/llService"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:orientation="vertical">
 
                 <View style="@style/LineStyle" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="12dp"
-                    android:text="公司服务"
-                    android:textColor="@color/gray_color"
-                    android:textSize="14sp" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="12dp"
+                        android:text="公司服务"
+                        android:textColor="@color/gray_color"
+                        android:textSize="14sp" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/txtAddService"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableRight="@mipmap/icon_home_arrows_right04"
+                        android:drawablePadding="5dp"
+                        android:padding="12dp"
+                        android:text="添加"
+                        android:textColor="@color/gray_color"
+                        android:textSize="13sp" />
+
+                </LinearLayout>
 
                 <View style="@style/LineStyle" />
 
