--- a/app/src/main/res/layout/item_lv_recruit.xml
+++ b/app/src/main/res/layout/item_lv_recruit.xml
@@ -71,11 +71,17 @@
                 android:layout_marginLeft="20dp"
                 android:orientation="horizontal"
                 android:layout_toRightOf="@id/tv_salary">
+
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:src="@mipmap/coffee"/>
                 
                 <TextView
                     android:id="@+id/txtPosition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
                     android:text="挖掘机老司机"
                     android:textSize="12sp"
                     android:textColor="@color/text_gray_light_color"/>
